@@ -2,6 +2,9 @@ quanteda 0.9.5
 ==============  
 *  Improved tag handling for segment(x, what = "tags")
 
+Bug fixes
+---------
+*  Fixed a false-alarm warning message in textmodel_wordfish()
 
 
 quanteda 0.9.4
